--- a/html/styles/style.css
+++ b/html/styles/style.css
@@ -1,5 +1,5 @@
 #nav {
-	margin-top: 5px;
+	margin-top: 15px;
 	border-bottom: 6px solid #133463;
 }
 
@@ -11,6 +11,10 @@
 
 #nav_links {
 	padding-top: 25px;
+}
+
+.align-right {
+	float: right;
 }
 
 #screenshots {
@@ -29,4 +33,12 @@
 
 #features {
 	margin-top: 20px;
+}
+
+#footer {
+	display: block;
+	background-color: black;
+	color: white;
+	width: 100%;
+	height: 200px;
 }
